Fix margin problem which result in fixing the overflowing scroll bar at the html and add some javascript which toggle when scroll and apply navbar transition css

--- a/bootstrap_flexbox/bootstrap_fb_106/app.css
+++ b/bootstrap_flexbox/bootstrap_fb_106/app.css
@@ -1,6 +1,7 @@
 html {
     /* temporary fix for overflow content */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    width: 100%;
 }
 
 body {
@@ -26,6 +27,9 @@ body {
 
 .content {
     margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 #mainNavbar {
@@ -53,6 +57,11 @@ body {
 #headingGroup h1 {
     font-weight: 100;
     font-size: 4rem;
+}
+
+.navbar.scrolled {
+    background: rgb(222,192,222);
+    transition: background 500ms;
 }
 
 @media (max-width: 1200px){
